--- a/build.xml
+++ b/build.xml
@@ -6,10 +6,10 @@
     <property name="mod.name" value="ItemRender"/>
     <property name="mod.modid" value="itemrender"/>
 
-    <property name="minecraft.version" value="1.5.1"/>
+    <property name="minecraft.version" value="1.6.2"/>
 
-    <property name="forge.build" value="682"/>
-    <property name="forge.version" value="7.7.2"/>
+    <property name="forge.build" value="784"/>
+    <property name="forge.version" value="9.10.0"/>
     <property name="forge.filename" value="minecraftforge-src-${minecraft.version}-${forge.version}.${forge.build}.zip"/>
 
     <property name="forge.download" value="http://files.minecraftforge.net/minecraftforge/${forge.filename}"/>
@@ -29,7 +29,7 @@
     <property name="mcp.mappings.dir" value="${forge.dir}/mcp/conf"/>
     <property name="class.dir" value="${build.dir}/classes"/>
 
-    <property name="specialsource.jar" value="SpecialSource-1.5-SNAPSHOT-shaded.jar"/>
+    <property name="specialsource.jar" value="${mcp.dir}/runtime/bin/specialsource.jar"/>
 
     <property name="minecraft.inheritance" value="${temp.dir}/Minecraft-${minecraft.version}-mcp.inheritance"/>
 
@@ -49,13 +49,27 @@
 
     <path id="mod.classpath">
         <pathelement location="${mcp.dir}/bin/minecraft"/>
-        <pathelement location="${mcp.dir}/lib/argo-3.2.jar"/>
-        <pathelement location="${mcp.dir}/lib/asm-all-4.1.jar"/>
-        <pathelement location="${mcp.dir}/lib/bcprov-jdk15on-148.jar"/>
-        <pathelement location="${mcp.dir}/lib/guava-14.0-rc3.jar"/>
-        <pathelement location="${mcp.dir}/jars/bin/jinput.jar"/>
-        <pathelement location="${mcp.dir}/jars/bin/lwjgl.jar"/>
-        <pathelement location="${mcp.dir}/jars/bin/lwjgl_util.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\argo\argo\2.25_fixed\argo-2.25_fixed.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\com\google\code\gson\gson\2.2.2\gson-2.2.2.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\com\google\guava\guava\14.0\guava-14.0.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\com\paulscode\codecjorbis\20101023\codecjorbis-20101023.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\com\paulscode\codecwav\20101023\codecwav-20101023.jar"/>
+        <pathelement
+                location="${mcp.dir}\jars\libraries\com\paulscode\libraryjavasound\20101123\libraryjavasound-20101123.jar"/>
+        <pathelement
+                location="${mcp.dir}\jars\libraries\com\paulscode\librarylwjglopenal\20100824\librarylwjglopenal-20100824.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\com\paulscode\soundsystem\20120107\soundsystem-20120107.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\commons-io\commons-io\2.4\commons-io-2.4.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\lzma\lzma\0.0.1\lzma-0.0.1.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\net\java\jinput\jinput\2.0.5\jinput-2.0.5.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\net\java\jutils\jutils\1.0.0\jutils-1.0.0.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\net\minecraft\launchwrapper\1.3\launchwrapper-1.3.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\net\sf\jopt-simple\jopt-simple\4.5\jopt-simple-4.5.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\org\apache\commons\commons-lang3\3.1\commons-lang3-3.1.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\org\bouncycastle\bcprov-jdk15on\1.47\bcprov-jdk15on-1.47.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\org\lwjgl\lwjgl\lwjgl\2.9.0\lwjgl-2.9.0.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\org\lwjgl\lwjgl\lwjgl_util\2.9.0\lwjgl_util-2.9.0.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\org\ow2\asm\asm-all\4.1\asm-all-4.1.jar"/>
     </path>
 
     <target name="dist" depends="reobf-mod, sign-mod, jar-src"/>
@@ -104,7 +118,7 @@
         </jar>
     </target>
 
-    <target name="build-mod" depends="install-forge, filter-src">
+    <target name="build-mod" depends="install-forge, cache-resources, filter-src">
         <delete dir="${class.dir}" failonerror="no"/>
         <mkdir dir="${class.dir}"/>
         <javac srcdir="${src.dir}" destdir="${class.dir}" target="1.6" source="1.6"
@@ -144,10 +158,20 @@
         </java>
     </target>
 
-    <target name="jar-minecraft" depends="install-forge" unless="minecraft.jar.exists">
+    <target name="jar-minecraft" depends="install-forge, cache-resources" unless="minecraft.jar.exists">
         <jar destfile="${minecraft.mcp.jar}">
             <fileset dir="${mcp.dir}/bin/minecraft"/>
         </jar>
+    </target>
+
+
+    <target name="cache-resources" depends="install-forge">
+        <copy todir="${temp.dir}/mcp_data">
+            <fileset dir="${mcp.dir}">
+                <include name="jars/libraries/"/>
+                <include name="jars/assets/"/>
+            </fileset>
+        </copy>
     </target>
 
     <target name="install-forge" depends="download-forge" unless="forge.installed">
@@ -158,6 +182,10 @@
         <unzip src="${temp.dir}/${forge.filename}" dest="${forge.dir}">
             <cutdirsmapper dirs="1"/>
         </unzip>
+
+        <copy todir="${forge.dir}/fml/mcp_data" failonerror="no">
+            <fileset dir="${temp.dir}/mcp_data"/>
+        </copy>
 
         <exec dir="${forge.dir}" executable="${forge.dir}/fml/python/python_fml" osfamily="windows" inputstring="Yes\n">
             <arg value="install.py"/>
