--- a/build.xml
+++ b/build.xml
@@ -6,10 +6,10 @@
     <property name="mod.name" value="ItemRender"/>
     <property name="mod.modid" value="itemrender"/>
 
-    <property name="minecraft.version" value="1.6.2"/>
+    <property name="minecraft.version" value="1.6.4"/>
 
-    <property name="forge.build" value="828"/>
-    <property name="forge.version" value="9.10.0"/>
+    <property name="forge.build" value="949"/>
+    <property name="forge.version" value="9.11.1"/>
     <property name="forge.filename" value="minecraftforge-src-${minecraft.version}-${forge.version}.${forge.build}.zip"/>
 
     <property name="forge.download" value="http://files.minecraftforge.net/minecraftforge/${forge.filename}"/>
@@ -63,7 +63,7 @@
         <pathelement location="${mcp.dir}\jars\libraries\lzma\lzma\0.0.1\lzma-0.0.1.jar"/>
         <pathelement location="${mcp.dir}\jars\libraries\net\java\jinput\jinput\2.0.5\jinput-2.0.5.jar"/>
         <pathelement location="${mcp.dir}\jars\libraries\net\java\jutils\jutils\1.0.0\jutils-1.0.0.jar"/>
-        <pathelement location="${mcp.dir}\jars\libraries\net\minecraft\launchwrapper\1.3\launchwrapper-1.3.jar"/>
+        <pathelement location="${mcp.dir}\jars\libraries\net\minecraft\launchwrapper\1.8\launchwrapper-1.8.jar"/>
         <pathelement location="${mcp.dir}\jars\libraries\net\sf\jopt-simple\jopt-simple\4.5\jopt-simple-4.5.jar"/>
         <pathelement location="${mcp.dir}\jars\libraries\org\apache\commons\commons-lang3\3.1\commons-lang3-3.1.jar"/>
         <pathelement location="${mcp.dir}\jars\libraries\org\bouncycastle\bcprov-jdk15on\1.47\bcprov-jdk15on-1.47.jar"/>
@@ -166,8 +166,8 @@
     <target name="cache-resources" depends="install-forge">
         <copy todir="${temp.dir}/mcp_data">
             <fileset dir="${mcp.dir}">
-                <include name="jars/libraries/"/>
                 <include name="jars/assets/"/>
+                <exclude name="**/Thumbs.db"/>
             </fileset>
         </copy>
     </target>
